# trajectify

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml
docs/: gen_task.md
tests/unit/: test_chat.py  test_exporters.py  test_parser.py  test_trajectory.py  test_usage.py
trajectify/: __init__.py  cli.py  log.py  orchestrator.py  runner.py  verifier.py
trajectify/agents/: base.py  nop.py  registry.py
trajectify/agents/terminus/: __init__.py  agent.py  parser.py  summarizer.py  tmux.py
trajectify/agents/terminus/prompts/: system.txt  timeout.txt
trajectify/config/: loader.py  models.py
trajectify/environments/: __init__.py  base.py  docker.py
trajectify/environments/compose/: base.yaml  build.yaml
trajectify/exporters/: __init__.py  atif.py  base.py  rollout.py  sft.py
trajectify/llm/: base.py  chat.py  litellm_provider.py
trajectify/models/: __init__.py  result.py  rollout.py  task.py  trajectory.py  usage.py
trajectify/task_factory/: __init__.py  base.py  bug_fix.py  code_removal.py  log_analysis.py
trajectify/task_loaders/: __init__.py  base.py  terminal_bench.py  terminal_bench_v1.py
