[project]
name = "trajectify"
version = "0.1.0"
description = "A trajectory collection platform for RL and SFT training data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11",
    "litellm>=1.80",
    "pyyaml>=6.0",
    "toml>=0.10",
    "tenacity>=9.0",
    "shortuuid>=1.0",
]

[project.scripts]
trajectify = "trajectify.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trajectify"]

[tool.ruff.lint.isort]
known-first-party = ["trajectify"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
